# codex-gallery

./: .gitignore  LICENSE  README.ja.md  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
scripts/: generate-icons.mjs  release-version.mjs
src/: App.css  App.tsx  api.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ThumbnailImage.tsx
