[package]
name = "codex-gallery"
version = "0.1.0"
description = "A local timeline gallery for Codex-generated images."
authors = ["yidoon"]
license = "MIT"
repository = "https://github.com/Yidoon/codex-gallery"
edition = "2021"

[lib]
name = "codex_gallery_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
dirs = "6.0.0"
image = { version = "0.25.9", default-features = false, features = ["bmp", "gif", "jpeg", "png", "tiff", "webp"] }
notify = "8.2.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2.11.0", features = [] }
